# MahirTV

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-appimage.sh  do_not_open.txt
assets/: install_deps.sh  mahirtv_webview.py
src/: App.cpp  App.h  Math.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  main.cpp
src/screen/: HomeScreen.cpp  LanguageScreen.h  SettingsScreen.cpp  SettingsScreen.h  StoreScreen.h
src/screens/: AccountScreen.cpp  AccountScreen.h  HomeScreen.h  LanguageScreen.cpp  LoadingScreen.cpp  LoadingScreen.h  SaveDataScreen.cpp  SaveDataScreen.h  StoreScreen.cpp
